
[gd_scene load_steps=4 format=4]

[ext_resource type="Script" path="res://scripts/ui/shop_menu.gd" id="1_2w6fk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.054902, 0.0313726, 0.0588235, 0.75)
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0.85098, 0.254902, 0.27451, 0.95)
corner_radius_bottom_left = 4
corner_radius_bottom_right = 4
corner_radius_top_left = 4
corner_radius_top_right = 4

[node name="ShopMenu" type="CanvasLayer"]
layer = 250
script = ExtResource("1_2w6fk")

[node name="Panel" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -220.0
offset_right = 260.0
offset_bottom = 220.0

[node name="Margin" type="MarginContainer" parent="Panel"]
custom_constants/margin_left = 28
custom_constants/margin_top = 24
custom_constants/margin_right = 28
custom_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/Margin/VBox"]
text = "Bloodbound Bazaar"
horizontal_alignment = 1
add_theme_color_override("font_color", Color(0.890196, 0.333333, 0.333333))
theme_override_font_sizes/font_size = 40

[node name="HpLabel" type="Label" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
text = "Health: 0 / 0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 26

[node name="IntroLabel" type="Label" parent="Panel/Margin/VBox"]
text = "Spend life to gain boons. Leave at least a heartbeat to survive."
autowrap_mode = 1
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="Selector" type="VBoxContainer" parent="Panel/Margin/VBox"]
size_flags_horizontal = 3
custom_constants/separation = 12
alignment = 1

[node name="NavigationRow" type="HBoxContainer" parent="Panel/Margin/VBox/Selector"]
size_flags_horizontal = 3
custom_constants/separation = 16
alignment = 1

[node name="PrevButton" type="Button" parent="Panel/Margin/VBox/Selector/NavigationRow"]
unique_name_in_owner = true
text = "◀"
size_flags_horizontal = 1
theme_override_font_sizes/font_size = 36

[node name="IconContainer" type="VBoxContainer" parent="Panel/Margin/VBox/Selector/NavigationRow"]
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
custom_constants/separation = 10

[node name="AbilityIcon" type="TextureRect" parent="Panel/Margin/VBox/Selector/NavigationRow/IconContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 220)
texture_filter = 0
expand_mode = 1
stretch_mode = 5
size_flags_horizontal = 3
size_flags_vertical = 3
texture_repeat = 0

[node name="LevelBar" type="ProgressBar" parent="Panel/Margin/VBox/Selector/NavigationRow/IconContainer"]
unique_name_in_owner = true
size_flags_horizontal = 3
custom_minimum_size = Vector2(240, 22)
max_value = 5.0
step = 1.0
value = 0.0
show_percentage = false
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")

[node name="NextButton" type="Button" parent="Panel/Margin/VBox/Selector/NavigationRow"]
unique_name_in_owner = true
text = "▶"
size_flags_horizontal = 1
theme_override_font_sizes/font_size = 36

[node name="AbilityName" type="Label" parent="Panel/Margin/VBox/Selector"]
unique_name_in_owner = true
text = "Ability Name"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 30

[node name="AbilityDescription" type="Label" parent="Panel/Margin/VBox/Selector"]
unique_name_in_owner = true
size_flags_horizontal = 3
text = "Description..."
autowrap_mode = 1
horizontal_alignment = 1
theme_override_font_sizes/font_size = 18

[node name="CostLabel" type="Label" parent="Panel/Margin/VBox/Selector"]
unique_name_in_owner = true
text = "Cost: -0 HP"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="Separator" type="HSeparator" parent="Panel/Margin/VBox"]
size_flags_horizontal = 3

[node name="ButtonRow" type="HBoxContainer" parent="Panel/Margin/VBox"]
size_flags_horizontal = 3
custom_constants/separation = 18
alignment = 1

[node name="BuyButton" type="Button" parent="Panel/Margin/VBox/ButtonRow"]
unique_name_in_owner = true
text = "Absorb Power"
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="CloseButton" type="Button" parent="Panel/Margin/VBox/ButtonRow"]
unique_name_in_owner = true
text = "Leave Shop"
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="MessageLabel" type="Label" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
size_flags_horizontal = 3
text = "Trade health for forbidden power."
autowrap_mode = 1
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20
